[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = '1', features = ['derive'], default-features = false }
serde_json = '1'
itoa = '1'
thiserror = '1'
anyhow = '1'
bstr = '1'